# 8zip

./: Cargo.toml  README.md
.github/scripts/: package.json
.github/workflows/: release.yaml
src/: compress_tar_gz.rs  compress_tar_xz.rs  compress_zip.rs  decompress_tar_gz.rs  decompress_tar_xz.rs  decompress_zip.rs  input_target.rs  main.rs
src/platform/cmd_utils/: resolve_path.rs
