[package]
name = "eight-zip"
version = "0.0.0-local"
edition = "2024"

[[bin]]
name = "8zip"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
flate2 = "1.1.8"
glob = "0.3.3"
normalize-path = "0.2.1"
tar = "0.4.44"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = "7.0.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
